--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,14 @@
 [tox]
-envlist = py25, py26, py27
+envlist = py26, py27, py32
 
 [testenv]
 commands=python setup.py test
 
-[testenv:py25]
-deps = simplejson
-
 [testenv:py26]
+basepython = python2.6
 
 [testenv:py27]
+basepython = python2.7
+
+[testenv:py32]
+basepython = python3.2
