Switch tests runner to nose
Enable coverage and add relevant files to print a nice report.

--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,6 @@ envlist = py26, py27, py32, py33, py34
 skip_missing_interpreters = True
 
 [testenv]
-commands=python setup.py test
+deps = nose
+    coverage
+commands = python setup.py nosetests
