Pin `coverage` version to pass test with Python 3.2 (#40)
https://travis-ci.org/fluent/fluent-logger-python/jobs/82487668

--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,5 @@ skip_missing_interpreters = True
 
 [testenv]
 deps = nose
-    coverage
+    coverage>=3.7,<3.8
 commands = python setup.py nosetests
