--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
     - "pip install --use-mirrors -e ."
-    - "pip install coverage coveralls"
+    - "pip install 'coverage>=3.7,<3.8' coveralls"
 script:
     - "python ./setup.py nosetests"
 after_success:
