--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: python
 python:
   - "2.6"
@@ -5,9 +6,10 @@ python:
   - "3.2"
   - "3.3"
   - "3.4"
+  - "3.5"
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-    - "pip install --use-mirrors -e ."
+    - "pip install -e ."
     - "pip install 'coverage>=3.7,<3.8' coveralls"
 script:
     - "python ./setup.py nosetests"
