Show traceback on timeout (Python>=3.3)
Python >=3.3 has faulthandler package[1].
It can be used to display traceback on signal.

* [1]: https://docs.python.org/3.5/using/cmdline.html#envvar-PYTHONFAULTHANDLER

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ install:
     - "pip install -e ."
     - "pip install 'coverage>=3.7,<3.8' coveralls"
 script:
-    - "python ./setup.py nosetests"
+    - "PYTHONFAULTHANDLER=x timeout -sABRT 30s nosetests -vsd"
 after_success:
     - coveralls
