--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-  - "3.6-dev"
-  - "3.7-dev"
-  - "nightly"
+  - 3.6-dev
+  - 3.7-dev
+  - pypy
+  - pypy3
+  - nightly
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
     - "pip install -e ."
