Fixing PyPi credentials

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,9 @@ after_success:
 deploy:
   provider: pypi
   user: "repeatedly"
+  server: https://upload.pypi.org/legacy/
   password:
-    secure: "ePNUJvw76/pGM+c++vJ1Qa2a2/PZ0bWc04So9ZRTxlOWao4+ZgldsKqqFUps3NqyfddNUDwkoz7mNwJGMcLnkAJK9dhobolIdyMEVke1iQkXEJAuxQ6I3ezZp2wRYOfIl7+ztqXauZA5DflXVnfeOfPZpzvwLsFClFlklyCfWJM="
+    secure: ePNUJvw76/pGM+c++vJ1Qa2a2/PZ0bWc04So9ZRTxlOWao4+ZgldsKqqFUps3NqyfddNUDwkoz7mNwJGMcLnkAJK9dhobolIdyMEVke1iQkXEJAuxQ6I3ezZp2wRYOfIl7+ztqXauZA5DflXVnfeOfPZpzvwLsFClFlklyCfWJM=
   on:
     tags: true
     condition: '"$TRAVIS_PYTHON_VERSION" = "3.6" || "$TRAVIS_PYTHON_VERSION" = "2.7"'
