--- a/tox.ini
+++ b/tox.ini
@@ -6,5 +6,6 @@ skip_missing_interpreters = True
 [testenv]
 deps =
     pytest
+    pytest-cov
     msgpack
-commands = pytest -v
+commands = pytest --cov=fluent
