--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python }}
+        python-version: ${{ matrix.python-version }}
+        cache: "pip"
+        cache-dependency-path: requirements-dev.txt
     - name: Install dependencies
-      run: python -m pip install --upgrade tox
+      run: python -m pip install -r requirements-dev.txt
     - name: Run tests
-      run: tox -e py
+      run: pytest --cov=fluent
