--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ envlist = py27, py32, py33, py34, py35, py36, py37, py38
 skip_missing_interpreters = True
 
 [testenv]
-deps = nose
-    coverage~=4.5.4
-commands = python setup.py nosetests
+deps =
+    pytest
+    pytest-cov
+    msgpack
+commands = pytest --cov=fluent
