--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,14 @@ jobs:
       run: python -m pip install -r requirements-dev.txt
     - name: Run tests
       run: pytest --cov=fluent
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - run: pipx run hatch build
+    - uses: actions/upload-artifact@v2
+      with:
+        name: dist
+        path: dist/*.*
