--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy3.9", "pypy3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "pypy3.9", "pypy3.10"]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
@@ -24,3 +24,14 @@ jobs:
       run: python -m pip install -r requirements-dev.txt
     - name: Run tests
       run: pytest --cov=fluent
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - run: pipx run hatch build
+    - uses: actions/upload-artifact@v2
+      with:
+        name: dist
+        path: dist/*.*
